# gpsfish_minimal

./: .gitignore  CMakeLists.txt
data/: Makefile  ReadMe.txt  bin2txt.cc  binaryIO.cc  binaryIO.h
jni/: Android.mk  Application.mk
sample/binary-dist/gpsfish_setup/: README.ja.txt  README.txt
src/: Makefile  Makefile.icl  Makefile.icpc  benchmark.cpp  book.cpp  book.h  book.txt  config.h  csa2usi-minimal.pl  evaluate.cpp  evaluate.h  history.h  main.cpp  mainone.cc  misc.cpp  misc.h  move.cpp  move.h  movegen.cpp  movepick.cpp  movepick.h  osl_checkmate.cc  osl_checkmate.h  osl_eval.cc  osl_eval.h  osl_move.h  osl_movegen.h  osl_position.cc  osl_position.h  osl_types.cc  osl_types.h  position.cpp  position.h  position.tcc  revision.h  search.cpp  search.h  searchInfo.h  tables.cc  thread.cpp  (+11 more)
